--- a/apps/Admin/src/app/pages/kargolar/kargolar.component.html
+++ b/apps/Admin/src/app/pages/kargolar/kargolar.component.html
@@ -1,52 +1,46 @@
-<div class="app-content-header">
-    <div class="container-fluid">
-        <!--begin::Row-->
-        <div class="row">
-            <div class="col-sm-6">
-                <h3 class="mb-0">Kargolar</h3>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-end">
-                    <li class="breadcrumb-item"><a routerLink="/">Ana Sayfa</a></li>
-                    <li class="breadcrumb-item active" aria-current="page" routerLink="/kargolar">Kargolar</li>
-                </ol>
-            </div>
-        </div>
-        <!--end::Row-->
-    </div>
-</div>
-<div class="app-content">
-  <flexi-grid 
-    [data]="data()!" 
-    [dataBinding]="true" 
-    [total]="total()!"
-    [loading]="loading()"
-    [showCaption]="true"
-    captionTitle="Kargo Listesi"
-    [showCommandColumn]="true"
-    [commandColumnTemplate]="commandColumnTemplate"
-    (onRefresh)="result.reload()"
-    (dataStateChange)="dataStateChange($event)"
-    [captionTemplate]="captionTemplate"
-    >
-    <ng-template #captionTemplate>
-        <flexi-button btnSize="small" btnColor="primary" title="Kargo Ekle" flexiTooltip btnIcon="add" />
-    </ng-template>
-
-    <flexi-grid-column field="createAt" title="Kayıt Tarihi" filterType="date" format="dd MMM yyyy HH:mm:ss" />
-    <flexi-grid-column field="gonderenFullName" title="Gönderen Adı" />
-    <flexi-grid-column field="aliciFullName" title="Alıcı Adı" />
-    <flexi-grid-column field="teslimAdresiCity" title="Teslim Şehir" />
-    <flexi-grid-column field="teslimAdresiTown" title="Teslim İlçe" />
-    <flexi-grid-column field="kargoTipiName" title="Kargo Tipi" />
-    <flexi-grid-column field="agirlik" title="Ağırlık (kg)" />
-    <flexi-grid-column field="kargoDurumName" title="Kargo Durumu" />
-    <flexi-grid-column field="createUserName" title="Kaydeden Kul." />
-    <flexi-grid-column field="updateAt" title="Güncelleme Tar." filterType="date" format="dd MMM yyyy HH:mm:ss" />
-    <flexi-grid-column field="updateUserName" title="Güncelleyen Kul." />
-
-    <ng-template #commandColumnTemplate let-item>
-        <flexi-button btnSize="x-small" btnIcon="delete" btnColor="danger" title="Sil" flexiTooltip />
-    </ng-template>
-  </flexi-grid>
-</div>
+<app-blank pageTitle="Kargolar">
+    <flexi-grid 
+      [data]="data()!" 
+      [dataBinding]="true" 
+      [total]="total()!"
+      [loading]="loading()"
+      [showCaption]="true"
+      captionTitle="Kargo Listesi"
+      [showCommandColumn]="true"
+      [commandColumnTemplate]="commandColumnTemplate"    
+      (dataStateChange)="dataStateChange($event)"
+      [captionTemplate]="captionTemplate"
+      [showExportExcelBtn]="true"
+      [exportExcelButtonClick]="exportExcel.bind(this)"
+      fontSize="17px"
+      >
+      <ng-template #captionTemplate>
+          <flexi-button routerLink="/kargolar/ekle" btnSize="small" btnColor="primary" title="Kargo Ekle" flexiTooltip btnIcon="add" />
+      </ng-template>
+    
+      <flexi-grid-column field="createAt" title="Kayıt Tarihi" filterType="date" format="dd MMM yyyy HH:mm:ss" width="200px"/>
+      <flexi-grid-column field="gonderenFullName" title="Gön.Adı" />
+      <flexi-grid-column field="aliciFullName" title="Al.Adı" />
+      <flexi-grid-column field="teslimAdresiCity" title="Teslim Şehir" />
+      <flexi-grid-column field="teslimAdresiTown" title="Teslim İlçe" />
+      <flexi-grid-column field="kargoTipiName" title="Kargo Tipi" />
+      <flexi-grid-column field="agirlik" title="Ağırlık (kg)" />
+      <flexi-grid-column field="kargoDurumValue" title="Durum" textAlign="center" filterType="select" [filterData]="durumFilterData()">
+        <ng-template flexiGridCellTemplate let-item>
+            <span 
+            class="alert" 
+            [ngClass]="getDurumClass(item.kargoDurumName)" 
+            style="padding: 5px; border-width: 1px; border-color: #ccc;">
+                {{item.kargoDurumName}}
+            </span>
+        </ng-template>
+      </flexi-grid-column>
+      <flexi-grid-column field="createUserName" title="Kayd.Kul." />
+      <flexi-grid-column field="updateAt" title="Gün.Tar." filterType="date" format="dd MMM yyyy HH:mm:ss" />
+      <flexi-grid-column field="updateUserName" title="Gün.Kul." />
+    
+      <ng-template #commandColumnTemplate let-item>
+          <flexi-button btnSize="x-small" btnIcon="delete" btnColor="danger" title="Sil" flexiTooltip (click)="delete(item)"/>
+      </ng-template>
+    </flexi-grid>
+</app-blank>
