--- a/apps/Admin/src/app/layout/layout.component.html
+++ b/apps/Admin/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="app-wrapper">
-    <nav class="app-header navbar navbar-expand bg-body">      
-      <div class="container-fluid">        
-        <ul class="navbar-nav">          
+    <nav class="app-header navbar navbar-expand bg-body">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
           @for(val of breadcrumbs(); track val.routerLink){
             <li class="nav-item d-flex align-items-center">
               <a [routerLink]="val.routerLink" class="nav-link d-flex align-items-center">
@@ -10,15 +10,15 @@
                 </span>
                 <span>
                   {{val.name}}
-                </span>                
+                </span>
               </a>
               @if(!$last){
                 <span class="nav-item d-none d-md-block">></span>
               }
             </li>
           }
-        </ul>        
-        <ul class="navbar-nav ms-auto">          
+        </ul>
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown user-menu">
             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
               <img
@@ -28,7 +28,7 @@
               />
               <span class="d-none d-md-inline">Alexander Pierce</span>
             </a>
-            <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">              
+            <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
               <li class="user-header text-bg-primary">
                 <img
                   src="/assets/img/user2-160x160.jpg"
@@ -41,14 +41,14 @@
                 </p>
               </li>
               <li class="user-header">
-                <a class="btn btn-outline-danger w-100">Sign out</a>
+                <a class="btn btn-outline-danger w-100" (click)="logout()">Çıkış Yap</a>
               </li>
             </ul>
           </li>
         </ul>
       </div>
     </nav>
-    <aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">      
+    <aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">
       <div class="sidebar-brand">
         <!--begin::Brand Link-->
         <a href="./index.html" class="brand-link">
@@ -66,29 +66,29 @@
         <!--end::Brand Link-->
       </div>
       <div class="sidebar-wrapper">
-        <nav class="mt-2">         
+        <nav class="mt-2">
           <ul
             class="nav sidebar-menu flex-column"
             data-lte-toggle="treeview"
             role="menu"
             data-accordion="false"
-          >           
+          >
             <li class="nav-item">
-              <a routerLink="/" class="nav-link">                
+              <a routerLink="/" class="nav-link">
                 <span class="material-symbols-outlined">
                   home
                   </span>
                 <p>Ana Sayfa</p>
               </a>
-            </li>    
+            </li>
             <li class="nav-item">
-              <a routerLink="/kargolar" class="nav-link">                
+              <a routerLink="/kargolar" class="nav-link">
                 <span class="material-symbols-outlined">
                   package_2
                   </span>
                 <p>Kargolar</p>
               </a>
-            </li>         
+            </li>
           </ul>
         </nav>
       </div>
@@ -98,7 +98,7 @@
       <router-outlet/>
     </main>
 
-    <footer class="app-footer">      
+    <footer class="app-footer">
       <strong>
         {{time()}}
       </strong>
